--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,8 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src/**/*",
-    "prisma/**/*"
+    "src/**/*.ts",
+    "prisma/**/*.ts"
   ],
   "exclude": [
     "node_modules",
