--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src/**/*.ts",
-    "prisma/**/*.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules",
