Update project configuration and dependencies; modify .env.example, .gitignore, and package.json. Remove tsconfig.json and package-lock.json. Enhance .env.example with new API keys and update database URL format. Revise .gitignore to include additional files and directories. Update package.json to reflect new dependencies and scripts for improved development workflow.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # Database
-DATABASE_URL="postgres://postgres:postgres@localhost:5432/canals"
+DATABASE_URL="postgresql://user:password@localhost:5432/canals_db?schema=public"
 
 # Server
 PORT=3000
 NODE_ENV=development
+
+# Geocoding Service (if using external API)
+# GEOCODING_API_KEY=your_api_key_here
+
+# Payment Service (if using external API)
+# PAYMENT_API_KEY=your_api_key_here
