--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "canals-assessment",
   "version": "1.0.0",
-  "description": "Express + Prisma + Docker Backend for Order Management",
-  "main": "dist/server.js",
+  "description": "Canals Backend Assessment - Order Management System",
+  "main": "dist/index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "ts-node prisma/seed.ts",
@@ -16,20 +16,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.7.1",
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "@prisma/client": "^5.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.5",
-    "prisma": "^5.7.1",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.7.5",
+    "prisma": "^5.19.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.6.3"
   },
-  "engines": {
-    "node": ">=18.0.0"
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
