--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.7.5",
+    "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
     "prisma": "^5.19.0",
+    "supertest": "^7.2.2",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
