Update Docker configuration to improve application startup process; add entrypoint script for handling migrations and seeding, and modify README for simplified setup instructions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     volumes:
       - ./prisma:/app/prisma
     restart: unless-stopped
+    command: ["pnpm", "start"]
 
 volumes:
   postgres_data:
