--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:studio": "prisma studio",
-    "test:order": "ts-node scripts/test-order.ts",
-    "test:order:simple": "./scripts/test-order-simple.sh"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:setup-phase2": "ts-node scripts/setup-phase2-test-data.ts",
+    "test:distance-tiebreaker": "ts-node scripts/test-distance-tiebreaker.ts",
+    "test:no-split": "ts-node scripts/test-no-split-shipments.ts",
+    "test:partial-stock": "ts-node scripts/test-partial-stock.ts"
   },
   "keywords": [],
   "author": "",
@@ -27,8 +32,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.7.5",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
     "prisma": "^5.19.0",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
