Update .env.example with new database credentials and enhance .gitignore to exclude additional documentation files.

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ prisma/migrations/
 
 # Docker
 .dockerignore
+INTERVIEW_CHEAT_SHEET.md
+.kiro/specs/order-management-api/design.md
+.kiro/specs/order-management-api/requirements.md
+.kiro/specs/order-management-api/tasks.md
