--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "ES2020"
     ],
     "outDir": "./dist",
-    "rootDir": ".",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -22,8 +22,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src/**/*",
-    "cli/**/*"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
