--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:setup-phase2": "ts-node scripts/setup-phase2-test-data.ts",
-    "test:distance-tiebreaker": "ts-node scripts/test-distance-tiebreaker.ts",
-    "test:no-split": "ts-node scripts/test-no-split-shipments.ts",
-    "test:partial-stock": "ts-node scripts/test-partial-stock.ts"
+    "cli": "ts-node cli/index.ts",
+    "docker:rebuild": "docker compose down && docker compose build --no-cache app && docker compose up"
   },
   "keywords": [],
   "author": "",
@@ -30,12 +28,15 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@clack/prompts": "^0.8.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.7.5",
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
+    "ora": "^8.1.1",
+    "picocolors": "^1.1.1",
     "prisma": "^5.19.0",
     "supertest": "^7.2.2",
     "ts-jest": "^29.1.2",
