Enhance CLI functionality and order processing
- Added a new Docker command for starting the PostgreSQL database.
- Implemented warehouse selection boxes in the CLI to display available warehouses after order completion, highlighting the selected warehouse.
- Updated the order service to include product names in order items for better clarity.
- Enhanced type definitions to include product names in order item responses, improving data consistency.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "cli": "ts-node cli/index.ts",
-    "docker:rebuild": "docker compose down && docker compose build --no-cache app && docker compose up"
+    "docker:rebuild": "docker compose down && docker compose build --no-cache app && docker compose up",
+    "docker:db": "docker compose up -d postgres"
   },
   "keywords": [],
   "author": "",
